--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = pdfextractor
 version = 1.0.0
+url = https://gitlab-student.centralesupelec.fr/jonathan.cassaing/pdfextractor
 license = MIT
 description = Tool for parsing and extracting PDF file content
 long_description = file: README.md
