--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,25 @@
-stages:
-  - test
+image: "python:3.8"
 
-test job:
-  stage: test
+before_script:
+  - python --version
+  - pip install -e --quiet .
+
+stages:
+  - Test
+
+pytest:
+  stage: Test
   script:
-    - export PYTHONPATH=.
-    - export FLASK_APP=pdfextractor
-    - export FLASK_ENV=development
-    - pip install -e --quiet .
-    - pytest
+  - pytest
+
+#stages:
+#  - test
+
+#test job:
+#  stage: test
+#  script:
+#    - export PYTHONPATH=.
+#    - export FLASK_APP=pdfextractor
+#    - export FLASK_ENV=development
+#    - pip install -e --quiet .
+#    - pytest
