--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: "python:3.8"
 before_script:
   - python --version
   - pip install -e . --quiet
-  - pip install '.[test]' --quiet
+  - pip install pytest
 
 stages:
   - Test
