--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,16 +12,7 @@ stages:
 pytest:
   stage: Test
   script:
+  - export PYTHONPATH=.
+  - export FLASK_APP=pdfextractor
+  - export FLASK_ENV=development
   - pytest
-
-#stages:
-#  - test
-
-#test job:
-#  stage: test
-#  script:
-#    - export PYTHONPATH=.
-#    - export FLASK_APP=pdfextractor
-#    - export FLASK_ENV=development
-#    - pip install -e --quiet .
-#    - pytest
