--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,9 @@ packages = find:
 include_package_data = true
 install_requires =
     Flask
+    SQLAlchemy
+    PyPDF2
+    pdftotext
 
 [options.extras_require]
 test =
