--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@ image: "python:3.8"
 
 before_script:
   - python --version
+  - python -m venv venv
+  - . venv/bin/activate
   - pip install -r requirements.txt
   - pip install pytest
   - pip install '.[test]'
