--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ before_script:
   - python --version
   - python -m venv venv
   - . venv/bin/activate
+  - python -m pip install --upgrade pip
   - pip install -r requirements.txt
   - pip install pytest
   - pip install '.[test]'
