--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ before_script:
   - python -m pip install --upgrade pip
   - pip install -r requirements.txt
   - pip install pytest
+  - pip install pylint
   - pip install '.[test]'
 
 stages:
