--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: "python:3.8"
+image: "python:3.9"
 
 # Change pip's cache directory to be inside the project directory since we can
 # only cache local items.
@@ -36,7 +36,7 @@ pylint:
   stage: Static Analysis
   allow_failure: true
   script:
-  - pylint pdfextractor/*
+  - pylint --disable too-many-instance-attributes --disable too-few-public-methods --disable too-many-arguments --disable c-extension-no-member pdfextractor/*
 
 pytest:
   stage: Test
