Fixing test when inserting PDF

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pdfextractor
 version = 1.0.0
-url = https://gitlab-student.centralesupelec.fr/jonathan.cassaing/pdfextractor
+url = https://github.com/snook9/pdf_extractor
 license = MIT
 description = Tool for parsing and extracting PDF file content
 long_description = file: README.md
