--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: 3.9
     - name: Install dependencies
       run: |
-        apt install build-essential libpoppler-cpp-dev pkg-config python3-dev
+        sudo apt-get install build-essential libpoppler-cpp-dev pkg-config python3-dev
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pylint
